fix missing padding on filter item list

--- a/src/app/modules/shared/filters/components/filter-item-list/filter-item-list.component.scss
+++ b/src/app/modules/shared/filters/components/filter-item-list/filter-item-list.component.scss
@@ -2,6 +2,7 @@
 	height: 100%;
 	overflow-y: auto;
 	display: block;
+	padding-right: var(--spacing-default);
 }
 
 h3{
